--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="main.js">
     <title>Dżej Es</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, error?</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <button>Ustaw tło paragrafów</button>
+    <p id="par1" class="paragraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit quidem quam, optio, exercitationem molestiae perspiciatis voluptates minus, eos numquam ut mollitia corporis assumenda labore eligendi. Ad omnis pariatur, rerum labore!</p>
+    <p id="par2" class="paragraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, provident?</p>
+    <p class="par"></p>
+    <p class="par"></p>
+    <p class="par"></p>
+    <p class="par"></p>
+    <p class="par"></p>
+    <p class="par"></p>
+    <p class="par"></p>
+    <button id="btn-main">Ustaw tło paragrafów</button>
+    <script src="main.js"></script>
 </body>
 </html>
